# surface-dial-linux

./: .gitattributes  Cargo.toml  README.md  surface-dial-udev.rules  surface-dial.service
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
install/: 50-surface-dial.rules  99-surface-dial.rules  99-uinput.rules  surface-dial.service
notes/: HID_Report_Descriptor.txt  descriptor.c  touchpad_evtest.txt
src/: common.rs  config.rs  dial_device.rs  error.rs  fake_input.rs  main.rs
src/controller/: mod.rs
src/controller/controls/: dpad.rs  media.rs  media_with_volume.rs  mod.rs  null.rs  paddle.rs  scroll.rs  scroll_mt.rs  scroll_zoom.rs  volume.rs  zoom.rs
src/dial_device/: events.rs  haptics.rs  mod.rs
